[metadata]
name = apogee_drp
author = David Nidever, Jon Holtzman, Drew Chojnowski
author_email = davidnidever@gmail.com
license = BSD 3-Clause
license_file = LICENSE.md
url = https://github.com/sdss/apogee_drp
description = SDSS APOGEE data reduction software
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = sdss/apogee_drp
version = 0.1.0

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    astropy
    scipy

[options.entry_points]

[options.extras_require]
# Must be checked against requirements-dev.txt
test =
    pytest
    pytest-astropy
    ipython
docs =
    sphinx==3.0.1
    sphinx-astropy
    nbsphinx
    nbconvert
    nbformat
    ipykernel

[options.package_data]
* = *.c

[tool:pytest]
testpaths = "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_